Added the @Inject extension IQualifiedNameProvider support.

--- a/miniProject2/plugins/de.luh.se.mbse.network.textualeditor/xtend-gen/de/luh/se/mbse/network/textualeditor/.gitignore
+++ b/miniProject2/plugins/de.luh.se.mbse.network.textualeditor/xtend-gen/de/luh/se/mbse/network/textualeditor/.gitignore
@@ -1,2 +1,6 @@
 /.AmfRuntimeModule.java._trace
 /.AmfStandaloneSetup.java._trace
+/.AmfRuntimeModule.xtendbin
+/.AmfStandaloneSetup.xtendbin
+/AmfRuntimeModule.java
+/AmfStandaloneSetup.java
